chore: extract translations

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -53,6 +53,9 @@
   "Remove": "Remove",
   "Appears on the cards": "Appears on the cards",
   "Once you replace the URL it will apply on each of the following cards:": "Once you replace the URL it will apply on each of the following cards:",
+  "Start a Conversation": "Start a Conversation",
+  "Link to Bible": "Link to Bible",
+  "Visit a Website": "Visit a Website",
   "What are Goals?": "What are Goals?",
   "Depending on the link you provide for the actions, the target of your Journey will be determined automatically from the following list:": "Depending on the link you provide for the actions, the target of your Journey will be determined automatically from the following list:",
   "Goals": "Goals",
@@ -61,14 +64,10 @@
   "On this screen you will see all your goals and actions listed in a single table. Create cards with some actions like buttons. We will list all your links and actions here so you can:": "On this screen you will see all your goals and actions listed in a single table. Create cards with some actions like buttons. We will list all your links and actions here so you can:",
   "The Journey Goals": "The Journey Goals",
   "You can change them to your own clicking on the rows of this table": "You can change them to your own clicking on the rows of this table",
-  "Information": "Information",
   "Target and Action": "Target and Action",
   "Appears on": "Appears on",
   "cards": "cards",
   "card": "card",
-  "Start a Conversation": "Start a Conversation",
-  "Link to Bible": "Link to Bible",
-  "Visit a Website": "Visit a Website",
   "Form": "Form",
   "Hosted By": "Hosted By",
   "Next Card Properties": "Next Card Properties",
@@ -108,18 +107,19 @@
   "Navigate to:": "Navigate to:",
   "Redirect user to the selected resource": "Redirect user to the selected resource",
   "Default Next Step defined in the current card settings.": "Default Next Step defined in the current card settings.",
-  "Button Properties": "Button Properties",
   "Form Properties": "Form Properties",
+  "Card Properties": "Card Properties",
+  "Video Properties": "Video Properties",
   "Image Properties": "Image Properties",
-  "Poll Properties": "Poll Properties",
+  "Typography Properties": "Typography Properties",
+  "Button Properties": "Button Properties",
   "Poll Option Properties": "Poll Option Properties",
   "Subscribe Properties": "Subscribe Properties",
-  "Card Properties": "Card Properties",
   "Feedback Properties": "Feedback Properties",
-  "Typography Properties": "Typography Properties",
-  "Video Properties": "Video Properties",
-  "Footer Properties": "Footer Properties",
   "Social Share Preview": "Social Share Preview",
+  "Goal Details": "Goal Details",
+  "Information": "Information",
+  "Footer Properties": "Footer Properties",
   "Action": "Action",
   "Color": "Color",
   "Background Color": "Background Color",
