--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -80,7 +80,6 @@
   "Add New Option": "Add New Option",
   "Add your text here...": "Add your text here...",
   "Are you sure you would like to delete this card?": "Are you sure you would like to delete this card?",
-  "Properties": "Properties",
   "Let's Connect": "Let's Connect",
   "From 'hello' to heartfelt conversations": "From 'hello' to heartfelt conversations",
   "Chat with us": "Chat with us",
@@ -108,18 +107,17 @@
   "Navigate to:": "Navigate to:",
   "Redirect user to the selected resource": "Redirect user to the selected resource",
   "Default Next Step defined in the current card settings.": "Default Next Step defined in the current card settings.",
-  "Button Properties": "Button Properties",
   "Form Properties": "Form Properties",
+  "Card Properties": "Card Properties",
+  "Video Properties": "Video Properties",
   "Image Properties": "Image Properties",
-  "Poll Properties": "Poll Properties",
+  "Typography Properties": "Typography Properties",
+  "Button Properties": "Button Properties",
   "Poll Option Properties": "Poll Option Properties",
   "Subscribe Properties": "Subscribe Properties",
-  "Card Properties": "Card Properties",
   "Feedback Properties": "Feedback Properties",
-  "Typography Properties": "Typography Properties",
-  "Video Properties": "Video Properties",
-  "Footer Properties": "Footer Properties",
   "Social Share Preview": "Social Share Preview",
+  "Footer Properties": "Footer Properties",
   "Action": "Action",
   "Color": "Color",
   "Background Color": "Background Color",
@@ -234,8 +232,9 @@
   "Video Source": "Video Source",
   "Video Options": "Video Options",
   "Social Image": "Social Image",
-  "Preview": "Preview",
   "Edit Journey Actions": "Edit Journey Actions",
+  "Preview": "Preview",
+  "Manage Access": "Manage Access",
   "Template Settings": "Template Settings",
   "Title": "Title",
   "Description": "Description",
@@ -253,6 +252,15 @@
   "Metadata": "Metadata",
   "Categories": "Categories",
   "About": "About",
+  "Embed Journey": "Embed Journey",
+  "Show Preview": "Show Preview",
+  "By embedding a Journey to your site, you agree to the ": "By embedding a Journey to your site, you agree to the ",
+  "Terms of agreement": "Terms of agreement",
+  "Share": "Share",
+  "Share This Journey": "Share This Journey",
+  "Edit URL": "Edit URL",
+  "Field update failed. Reload the page or try again.": "Field update failed. Reload the page or try again.",
+  "Strategy": "Strategy",
   "Prompt must be at least one character": "Prompt must be at least one character",
   "Prompt": "Prompt",
   "Add image by URL": "Add image by URL",
@@ -264,14 +272,6 @@
   "Featured Images": "Featured Images",
   "Load More": "Load More",
   "Change": "Change",
-  "Access Control": "Access Control",
-  "Embed Journey": "Embed Journey",
-  "Show Preview": "Show Preview",
-  "By embedding a Journey to your site, you agree to the ": "By embedding a Journey to your site, you agree to the ",
-  "Terms of agreement": "Terms of agreement",
-  "Journey URL": "Journey URL",
-  "Edit URL": "Edit URL",
-  "Field update failed. Reload the page or try again.": "Field update failed. Reload the page or try again.",
   "Messaging App View": "Messaging App View",
   "Social App View": "Social App View",
   "Cover Image": "Cover Image",
@@ -397,7 +397,6 @@
   "You need access": "You need access",
   "You need to be a publisher to view this template.": "You need to be a publisher to view this template.",
   "Back to the Admin Panel": "Back to the Admin Panel",
-  "Strategy": "Strategy",
   "Case Study Preview": "Case Study Preview",
   "Please select a valid team": "Please select a valid team",
   "Copy": "Copy",
