feat: add blocks (#2309)
Co-authored-by: Tataihono Nikora <tataihono.nikora@gmail.com>

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -118,6 +118,7 @@
   "Social Share Preview": "Social Share Preview",
   "Goal Details": "Goal Details",
   "Information": "Information",
+  "Add a block": "Add a block",
   "Footer Properties": "Footer Properties",
   "Action": "Action",
   "Color": "Color",
@@ -262,6 +263,8 @@
   "Edit URL": "Edit URL",
   "Field update failed. Reload the page or try again.": "Field update failed. Reload the page or try again.",
   "Strategy": "Strategy",
+  "Done": "Done",
+  "Edit": "Edit",
   "Prompt must be at least one character": "Prompt must be at least one character",
   "Prompt": "Prompt",
   "Add image by URL": "Add image by URL",
@@ -467,7 +470,6 @@
   "{{count}} Videos_one": "{{count}} Video",
   "{{count}} Videos_other": "{{count}} Videos",
   "Related Templates": "Related Templates",
-  "Edit": "Edit",
   "Before You Start": "Before You Start",
   "Please review these documents:": "Please review these documents:",
   "I agree with listed above conditions and requirements": "I agree with listed above conditions and requirements",
