chore: extract translations

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -69,7 +69,6 @@
   "cards": "cards",
   "card": "card",
   "Form": "Form",
-  "Hosted By": "Hosted By",
   "Next Card Properties": "Next Card Properties",
   "Card Templates": "Card Templates",
   "Fill this card with content": "Fill this card with content",
@@ -167,31 +166,25 @@
   "Paste URL here": "Paste URL here",
   "Error adding button, please reload and try again.": "Error adding button, please reload and try again.",
   "Error removing button, please reload and try again.": "Error removing button, please reload and try again.",
-  "Facebook": "Facebook",
-  "Vk": "Vk",
-  "Line": "Line",
-  "and": "and",
-  "None": "None",
-  "Host's name": "Host's name",
+  "Hosted By": "Hosted By",
   "Chat Widget": "Chat Widget",
-  "Chat Platform": "Chat Platform",
+  "Select a Host": "Select a Host",
+  "Cannot edit hosts for this old journey": "Cannot edit hosts for this old journey",
+  "Only {{teamName} members can edit this": "Only {{teamName} members can edit this",
   "Edit Host": "Edit Host",
   "Create Host": "Create Host",
   "Clear": "Clear",
   "Edits: Making changes here will apply to all journeys that share this Host.": "Edits: Making changes here will apply to all journeys that share this Host.",
-  "Select a Host": "Select a Host",
-  "Cannot edit hosts for this old journey": "Cannot edit hosts for this old journey",
-  "Only": "Only",
-  "members can edit this": "members can edit this",
-  "Hosts": "Hosts",
-  "Create New": "Create New",
   "Why does your journey need a host?": "Why does your journey need a host?",
   "A great way to add personality to your content is to include both male and female journey creators. Diverse creators, especially with a local feel, are more likely to engage users in conversation.": "A great way to add personality to your content is to include both male and female journey creators. Diverse creators, especially with a local feel, are more likely to engage users in conversation.",
   "In countries with security concerns, it is advisable to create fake personas for your own safety.": "In countries with security concerns, it is advisable to create fake personas for your own safety.",
+  "Hosts": "Hosts",
+  "Create New": "Create New",
   "API Token updated": "API Token updated",
   "Api Token": "Api Token",
   "Click here for formium docs on finding your api token": "Click here for formium docs on finding your api token",
   "Form Slug": "Form Slug",
+  "None": "None",
   "Project Id": "Project Id",
   "Credentials": "Credentials",
   "Complete": "Complete",
@@ -474,6 +467,7 @@
   "Please review these documents:": "Please review these documents:",
   "I agree with listed above conditions and requirements": "I agree with listed above conditions and requirements",
   "Open conversation": "Open conversation",
+  "Chat Platform": "Chat Platform",
   "Username": "Username",
   "Private Note": "Private Note",
   "Visible to your team only": "Visible to your team only",
@@ -495,6 +489,7 @@
   "Video completed": "Video completed",
   "Selected Card": "Selected Card",
   "Journey": "Journey",
+  "Facebook": "Facebook",
   "ID": "ID",
   "Last Active": "Last Active",
   "User Data": "User Data",
