--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -1,6 +1,19 @@
 {
   "%s | Next Steps": "%s | Next Steps",
   "Admin | Next Steps": "Admin | Next Steps",
+  "Email Preferences Updated.": "Email Preferences Updated.",
+  "Email Preferences Updated. Unsubscribed to all": "Email Preferences Updated. Unsubscribed to all",
+  "Email Preferences": "Email Preferences",
+  "Team Invite": "Team Invite",
+  "Optional Description.": "Optional Description.",
+  "Team Remove": "Team Remove",
+  "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
+  "Team Invite Accepted": "Team Invite Accepted",
+  "Journey Edit Invite": "Journey Edit Invite",
+  "Journey Request Approved": "Journey Request Approved",
+  "Journey Access Request": "Journey Access Request",
+  "Unsubscribe All": "Unsubscribe All",
+  "Submit Changes": "Submit Changes",
   "Journeys": "Journeys",
   "Create a New Journey": "Create a New Journey",
   "Request Access": "Request Access",
@@ -23,19 +36,6 @@
   "A question about creating a team for the first time.": "A question about creating a team for the first time.",
   "Journey Template": "Journey Template",
   "Journey Templates": "Journey Templates",
-  "Unsubscribed From all Emails.": "Unsubscribed From all Emails.",
-  "Email Preferences Updated.": "Email Preferences Updated.",
-  "Email Preferences": "Email Preferences",
-  "Team Invite": "Team Invite",
-  "Optional Description.": "Optional Description.",
-  "Team Remova": "Team Remova",
-  "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
-  "Team Invite Accepted": "Team Invite Accepted",
-  "Journey Edit Invite": "Journey Edit Invite",
-  "Journey Request Approved": "Journey Request Approved",
-  "Journey Access Request": "Journey Access Request",
-  "Unsubscribe All": "Unsubscribe All",
-  "Submit Changes": "Submit Changes",
   "Sign In": "Sign In",
   "Terms and Conditions": "Terms and Conditions",
   "A question about the terms and conditions form": "A question about the terms and conditions form",
