fix: dialog wording change

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -54,7 +54,7 @@
   "Users invited by link will request approval.": "Users invited by link will request approval.",
   "Please enter a valid email address": "Please enter a valid email address",
   "This email is already on the list": "This email is already on the list",
-  "No email notifications. New users get access instantly.": "No email notifications. New users get access instantly.",
+  "New users get access instantly.": "New users get access instantly.",
   "Approve": "Approve",
   "Promote": "Promote",
   "Remove": "Remove",
@@ -411,7 +411,7 @@
   "Change Team Name": "Change Team Name",
   "Save": "Save",
   "Only a manager can invite new members to the team": "Only a manager can invite new members to the team",
-  "No email notifications. New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.": "No email notifications. New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.",
+  "New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.": "New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.",
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}} {{secondLanguage}}</2>": "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}}, {{secondLanguage}}</2>",
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}}</2>_one": "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}}</2>",
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}}</2>_other": "<0>Journey Templates</0><1>in</1><2>{{count}} languages</2>",
