feat: email notifications unsubscribe (#2279)
Co-authored-by: Nisal Cottingham <114973713+Kneesal@users.noreply.github.com>
Co-authored-by: Kneesal <nisalcottingham@gmail.com>
Co-authored-by: Mike Allison <dj.mikeallison@gmail.com>

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -1,6 +1,19 @@
 {
   "%s | Next Steps": "%s | Next Steps",
   "Admin | Next Steps": "Admin | Next Steps",
+  "Email Preferences Updated.": "Email Preferences Updated.",
+  "Email Preferences Updated. Unsubscribed to all": "Email Preferences Updated. Unsubscribed to all",
+  "Email Preferences": "Email Preferences",
+  "Team Invite": "Team Invite",
+  "Optional Description.": "Optional Description.",
+  "Team Remove": "Team Remove",
+  "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
+  "Team Invite Accepted": "Team Invite Accepted",
+  "Journey Edit Invite": "Journey Edit Invite",
+  "Journey Request Approved": "Journey Request Approved",
+  "Journey Access Request": "Journey Access Request",
+  "Unsubscribe All": "Unsubscribe All",
+  "Submit Changes": "Submit Changes",
   "Journeys": "Journeys",
   "Create a New Journey": "Create a New Journey",
   "Request Access": "Request Access",
