feat: notification refactor

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -4,14 +4,8 @@
   "Email Preferences Updated.": "Email Preferences Updated.",
   "Email Preferences Updated. Unsubscribed to all": "Email Preferences Updated. Unsubscribed to all",
   "Email Preferences": "Email Preferences",
-  "Team Invite": "Team Invite",
-  "Optional Description.": "Optional Description.",
-  "Team Remove": "Team Remove",
-  "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
-  "Team Invite Accepted": "Team Invite Accepted",
-  "Journey Edit Invite": "Journey Edit Invite",
-  "Journey Request Approved": "Journey Request Approved",
-  "Journey Access Request": "Journey Access Request",
+  "Account Notifications": "Account Notifications",
+  "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.": "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.",
   "Unsubscribe All": "Unsubscribe All",
   "Submit Changes": "Submit Changes",
   "Journeys": "Journeys",
