feat: transactional emails

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -35,11 +35,14 @@
   "A question about the terms and conditions form": "A question about the terms and conditions form",
   "Required": "Required",
   "Validate NextStep Email": "Validate NextStep Email",
-  "Please check your email for the six-digit token that was sent to your email address.": "Please check your email for the six-digit token that was sent to your email address.",
-  "Email": "Email",
-  "Token": "Token",
-  "Validate Email": "Validate Email",
+  "Verify Your Email": "Verify Your Email",
+  "To start making NextSteps journeys": "To start making NextSteps journeys",
+  "Email has been sent to this address with a link to verify your account. If you have not received the email after a few minutes, please check your spam folder.": "Email has been sent to this address with a link to verify your account. If you have not received the email after a few minutes, please check your spam folder.",
   "Resend Validation Email": "Resend Validation Email",
+  "Verify With Code Instead": "Verify With Code Instead",
+  "Enter verification code from email": "Enter verification code from email",
+  "Code": "Code",
+  "Validate Email": "Validate Email",
   "Logout": "Logout",
   "You can't edit this journey": "You can't edit this journey",
   "Send an access request to the creator of this journey": "Send an access request to the creator of this journey",
@@ -61,6 +64,7 @@
   "Users invited by link will request approval.": "Users invited by link will request approval.",
   "Please enter a valid email address": "Please enter a valid email address",
   "This email is already on the list": "This email is already on the list",
+  "Email": "Email",
   "New users get access instantly.": "New users get access instantly.",
   "Approve": "Approve",
   "Promote": "Promote",
