fix: run extract translations

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -51,26 +51,9 @@
   "Approve": "Approve",
   "Promote": "Promote",
   "Remove": "Remove",
-  "Appears on the cards": "Appears on the cards",
-  "Once you replace the URL it will apply on each of the following cards:": "Once you replace the URL it will apply on each of the following cards:",
-  "Start a Conversation": "Start a Conversation",
-  "Link to Bible": "Link to Bible",
-  "Visit a Website": "Visit a Website",
-  "What are Goals?": "What are Goals?",
-  "Depending on the link you provide for the actions, the target of your Journey will be determined automatically from the following list:": "Depending on the link you provide for the actions, the target of your Journey will be determined automatically from the following list:",
-  "Goals": "Goals",
-  "Learn More": "Learn More",
-  "Every Journey has a goal": "Every Journey has a goal",
-  "On this screen you will see all your goals and actions listed in a single table. Create cards with some actions like buttons. We will list all your links and actions here so you can:": "On this screen you will see all your goals and actions listed in a single table. Create cards with some actions like buttons. We will list all your links and actions here so you can:",
-  "The Journey Goals": "The Journey Goals",
-  "You can change them to your own clicking on the rows of this table": "You can change them to your own clicking on the rows of this table",
-  "Target and Action": "Target and Action",
-  "Appears on": "Appears on",
-  "cards": "cards",
-  "card": "card",
-  "Form": "Form",
-  "Next Card Properties": "Next Card Properties",
-  "Card Templates": "Card Templates",
+  "Add": "Add",
+  "Edit": "Edit",
+  "Done": "Done",
   "Fill this card with content": "Fill this card with content",
   "Select Card Template": "Select Card Template",
   "or add blocks from the list below ⤵": "or add blocks from the list below ⤵",
@@ -78,47 +61,30 @@
   "Add New Option": "Add New Option",
   "Add your text here...": "Add your text here...",
   "Are you sure you would like to delete this card?": "Are you sure you would like to delete this card?",
-  "Let's Connect": "Let's Connect",
-  "From 'hello' to heartfelt conversations": "From 'hello' to heartfelt conversations",
-  "Chat with us": "Chat with us",
-  "Email us": "Email us",
-  "More about us": "More about us",
-  "Prayer Request": "Prayer Request",
-  "How can we pray for you?": "How can we pray for you?",
-  "Your answer here": "Your answer here",
-  "Submit": "Submit",
-  "Each day, we pray for those in our city. We'd be grateful to include your personal needs.": "Each day, we pray for those in our city. We'd be grateful to include your personal needs.",
-  "Interactive Video": "Interactive Video",
-  "Jesus: History's Most Influential Figure?": "Jesus: History's Most Influential Figure?",
-  "Journey through time, from dusty roads to modern cities, to understand the lasting impact and relevance of Jesus.": "Journey through time, from dusty roads to modern cities, to understand the lasting impact and relevance of Jesus.",
-  "Begin the Journey": "Begin the Journey",
-  "Got an Opinion?": "Got an Opinion?",
-  "Which of Jesus' teachings challenges you the most?": "Which of Jesus' teachings challenges you the most?",
-  "Turning the other cheek": "Turning the other cheek",
-  "Loving your enemies": "Loving your enemies",
-  "Not worrying about tomorrow": "Not worrying about tomorrow",
-  "Seeking first the kingdom of God": "Seeking first the kingdom of God",
-  "↑ Select an answer to continue": "↑ Select an answer to continue",
-  "The Bible Says:": "The Bible Says:",
-  "Blessed are the peacemakers, for they shall be called sons of God.": "Blessed are the peacemakers, for they shall be called sons of God.",
-  "– Jesus Christ": "– Jesus Christ",
+  "Goals": "Goals",
+  "Learn More": "Learn More",
+  "Every Journey has a goal": "Every Journey has a goal",
+  "On this screen you will see all your goals and actions listed in a single table. Create cards with some actions like buttons. We will list all your links and actions here so you can:": "On this screen you will see all your goals and actions listed in a single table. Create cards with some actions like buttons. We will list all your links and actions here so you can:",
+  "The Journey Goals": "The Journey Goals",
+  "You can change them to your own clicking on the rows of this table": "You can change them to your own clicking on the rows of this table",
+  "Start a Conversation": "Start a Conversation",
+  "Link to Bible": "Link to Bible",
+  "Visit a Website": "Visit a Website",
+  "Target and Action": "Target and Action",
+  "Appears on": "Appears on",
+  "cards": "cards",
+  "card": "card",
+  "Messaging App View": "Messaging App View",
+  "Social App View": "Social App View",
+  "Button": "Button",
+  "Form": "Form",
+  "Option": "Option",
+  "Subscribe": "Subscribe",
+  "Feedback": "Feedback",
+  "Video": "Video",
   "Navigate to:": "Navigate to:",
   "Redirect user to the selected resource": "Redirect user to the selected resource",
   "Default Next Step defined in the current card settings.": "Default Next Step defined in the current card settings.",
-  "Form Properties": "Form Properties",
-  "Card Properties": "Card Properties",
-  "Video Properties": "Video Properties",
-  "Image Properties": "Image Properties",
-  "Typography Properties": "Typography Properties",
-  "Button Properties": "Button Properties",
-  "Poll Option Properties": "Poll Option Properties",
-  "Subscribe Properties": "Subscribe Properties",
-  "Feedback Properties": "Feedback Properties",
-  "Social Share Preview": "Social Share Preview",
-  "Goal Details": "Goal Details",
-  "Information": "Information",
-  "Add a block": "Add a block",
-  "Footer Properties": "Footer Properties",
   "Action": "Action",
   "Color": "Color",
   "Background Color": "Background Color",
@@ -130,7 +96,6 @@
   "Trailing Icon": "Trailing Icon",
   "Palette": "Palette",
   "Custom": "Custom",
-  "Video": "Video",
   "Image": "Image",
   "Background": "Background",
   "Background Image": "Background Image",
@@ -175,6 +140,7 @@
   "Create Host": "Create Host",
   "Clear": "Clear",
   "Edits: Making changes here will apply to all journeys that share this Host.": "Edits: Making changes here will apply to all journeys that share this Host.",
+  "Information": "Information",
   "Why does your journey need a host?": "Why does your journey need a host?",
   "A great way to add personality to your content is to include both male and female journey creators. Diverse creators, especially with a local feel, are more likely to engage users in conversation.": "A great way to add personality to your content is to include both male and female journey creators. Diverse creators, especially with a local feel, are more likely to engage users in conversation.",
   "In countries with security concerns, it is advisable to create fake personas for your own safety.": "In countries with security concerns, it is advisable to create fake personas for your own safety.",
@@ -203,7 +169,9 @@
   "No next step in journey": "No next step in journey",
   "Next Card": "Next Card",
   "Unlocked Card": "Unlocked Card",
-  "Feedback": "Feedback",
+  "Next Card Properties": "Next Card Properties",
+  "Feedback Properties": "Feedback Properties",
+  "Your answer here": "Your answer here",
   "One Row": "One Row",
   "Two Rows": "Two Rows",
   "Three Rows": "Three Rows",
@@ -226,38 +194,42 @@
   "Overline": "Overline",
   "Video Source": "Video Source",
   "Video Options": "Video Options",
-  "Social Image": "Social Image",
-  "Edit Journey Actions": "Edit Journey Actions",
-  "Preview": "Preview",
-  "Manage Access": "Manage Access",
-  "Template Settings": "Template Settings",
-  "Title": "Title",
-  "Description": "Description",
-  "Public information about a person or a team created this journey": "Public information about a person or a team created this journey",
-  "Creator's Info": "Creator's Info",
-  "Embed web link from Google Slides or Canva": "Embed web link from Google Slides or Canva",
-  "Add": "Add",
-  "Recommended length: six words or shorter": "Recommended length: six words or shorter",
-  "Publicly visible on template details page": "Publicly visible on template details page",
-  "RTL languages will change the journey flow": "RTL languages will change the journey flow",
-  "Featured": "Featured",
-  "Invalid embed link": "Invalid embed link",
-  "Template settings have been saved": "Template settings have been saved",
-  "Cancel": "Cancel",
-  "Metadata": "Metadata",
-  "Categories": "Categories",
-  "About": "About",
-  "Embed Journey": "Embed Journey",
-  "Show Preview": "Show Preview",
-  "By embedding a Journey to your site, you agree to the ": "By embedding a Journey to your site, you agree to the ",
-  "Terms of agreement": "Terms of agreement",
-  "Share": "Share",
-  "Share This Journey": "Share This Journey",
-  "Edit URL": "Edit URL",
-  "Field update failed. Reload the page or try again.": "Field update failed. Reload the page or try again.",
-  "Strategy": "Strategy",
-  "Done": "Done",
-  "Edit": "Edit",
+  "Form Properties": "Form Properties",
+  "Card Properties": "Card Properties",
+  "Card Templates": "Card Templates",
+  "Video Properties": "Video Properties",
+  "Image Properties": "Image Properties",
+  "Typography Properties": "Typography Properties",
+  "Button Properties": "Button Properties",
+  "Poll Option Properties": "Poll Option Properties",
+  "Subscribe Properties": "Subscribe Properties",
+  "Let's Connect": "Let's Connect",
+  "From 'hello' to heartfelt conversations": "From 'hello' to heartfelt conversations",
+  "Chat with us": "Chat with us",
+  "Email us": "Email us",
+  "More about us": "More about us",
+  "Prayer Request": "Prayer Request",
+  "How can we pray for you?": "How can we pray for you?",
+  "Submit": "Submit",
+  "Each day, we pray for those in our city. We'd be grateful to include your personal needs.": "Each day, we pray for those in our city. We'd be grateful to include your personal needs.",
+  "Interactive Video": "Interactive Video",
+  "Jesus: History's Most Influential Figure?": "Jesus: History's Most Influential Figure?",
+  "Journey through time, from dusty roads to modern cities, to understand the lasting impact and relevance of Jesus.": "Journey through time, from dusty roads to modern cities, to understand the lasting impact and relevance of Jesus.",
+  "Begin the Journey": "Begin the Journey",
+  "Got an Opinion?": "Got an Opinion?",
+  "Which of Jesus' teachings challenges you the most?": "Which of Jesus' teachings challenges you the most?",
+  "Turning the other cheek": "Turning the other cheek",
+  "Loving your enemies": "Loving your enemies",
+  "Not worrying about tomorrow": "Not worrying about tomorrow",
+  "Seeking first the kingdom of God": "Seeking first the kingdom of God",
+  "↑ Select an answer to continue": "↑ Select an answer to continue",
+  "The Bible Says:": "The Bible Says:",
+  "Blessed are the peacemakers, for they shall be called sons of God.": "Blessed are the peacemakers, for they shall be called sons of God.",
+  "– Jesus Christ": "– Jesus Christ",
+  "Appears on the cards": "Appears on the cards",
+  "Once you replace the URL it will apply on each of the following cards:": "Once you replace the URL it will apply on each of the following cards:",
+  "What are Goals?": "What are Goals?",
+  "Depending on the link you provide for the actions, the target of your Journey will be determined automatically from the following list:": "Depending on the link you provide for the actions, the target of your Journey will be determined automatically from the following list:",
   "Prompt must be at least one character": "Prompt must be at least one character",
   "Prompt": "Prompt",
   "Add image by URL": "Add image by URL",
@@ -269,8 +241,11 @@
   "Featured Images": "Featured Images",
   "Load More": "Load More",
   "Change": "Change",
-  "Messaging App View": "Messaging App View",
-  "Social App View": "Social App View",
+  "Social Share Preview": "Social Share Preview",
+  "Goal Details": "Goal Details",
+  "Add a block": "Add a block",
+  "Footer Properties": "Footer Properties",
+  "Social Image": "Social Image",
   "Cover Image": "Cover Image",
   "Appears while video is loading": "Appears while video is loading",
   "Timing": "Timing",
@@ -303,9 +278,38 @@
   "Available Languages": "Available Languages",
   "Apply": "Apply",
   "Video Library": "Video Library",
-  "Button": "Button",
-  "Option": "Option",
-  "Subscribe": "Subscribe",
+  "Manage Access": "Manage Access",
+  "Analytics": "Analytics",
+  "Copy Link": "Copy Link",
+  "Create Template": "Create Template",
+  "Description": "Description",
+  "Language": "Language",
+  "Preview": "Preview",
+  "Embed Journey": "Embed Journey",
+  "Show Preview": "Show Preview",
+  "By embedding a Journey to your site, you agree to the ": "By embedding a Journey to your site, you agree to the ",
+  "Terms of agreement": "Terms of agreement",
+  "Share": "Share",
+  "Share This Journey": "Share This Journey",
+  "Edit URL": "Edit URL",
+  "Field update failed. Reload the page or try again.": "Field update failed. Reload the page or try again.",
+  "Cancel": "Cancel",
+  "Strategy": "Strategy",
+  "Public information about a person or a team created this journey": "Public information about a person or a team created this journey",
+  "Creator's Info": "Creator's Info",
+  "Embed web link from Google Slides or Canva": "Embed web link from Google Slides or Canva",
+  "Title": "Title",
+  "Recommended length: six words or shorter": "Recommended length: six words or shorter",
+  "Publicly visible on template details page": "Publicly visible on template details page",
+  "RTL languages will change the journey flow": "RTL languages will change the journey flow",
+  "Featured": "Featured",
+  "Invalid embed link": "Invalid embed link",
+  "Template settings have been saved": "Template settings have been saved",
+  "Template Settings": "Template Settings",
+  "Metadata": "Metadata",
+  "Categories": "Categories",
+  "About": "About",
+  "Edit Journey Actions": "Edit Journey Actions",
   "Journeys Archived": "Journeys Archived",
   "Journeys Trashed": "Journeys Trashed",
   "No journeys to display.": "No journeys to display.",
