fix: refactor goals

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -62,18 +62,23 @@
   "Add your text here...": "Add your text here...",
   "Are you sure you would like to delete this card?": "Are you sure you would like to delete this card?",
   "Goals": "Goals",
-  "Learn More": "Learn More",
   "Every Journey has a goal": "Every Journey has a goal",
   "On this screen you will see all your goals and actions listed in a single table. Create cards with some actions like buttons. We will list all your links and actions here so you can:": "On this screen you will see all your goals and actions listed in a single table. Create cards with some actions like buttons. We will list all your links and actions here so you can:",
+  "Check all URLs and actions used in the journey": "Check all URLs and actions used in the journey",
+  "Assign a goal to each action and monitor it": "Assign a goal to each action and monitor it",
+  "Change all URLs in a single place": "Change all URLs in a single place",
+  "Learn More": "Learn More",
   "The Journey Goals": "The Journey Goals",
   "You can change them to your own clicking on the rows of this table": "You can change them to your own clicking on the rows of this table",
+  "Target and Goal": "Target and Goal",
+  "Appears on": "Appears on",
   "Start a Conversation": "Start a Conversation",
   "Link to Bible": "Link to Bible",
   "Visit a Website": "Visit a Website",
-  "Target and Action": "Target and Action",
-  "Appears on": "Appears on",
-  "cards": "cards",
-  "card": "card",
+  "Appears on <1>{{count}}</1> card_one": "Appears on <1>{{count}}</1> card",
+  "Appears on <1>{{count}}</1> card_other": "Appears on <1>{{count}}</1> cards",
+  "<0>{{count}}</0><1>card</1>_one": "<0>{{count}}</0><1>card</1>",
+  "<0>{{count}}</0><1>card</1>_other": "<0>{{count}}</0><1>cards</1>",
   "Messaging App View": "Messaging App View",
   "Social App View": "Social App View",
   "Button": "Button",
