fix: extract translations

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -51,7 +51,6 @@
   "Approve": "Approve",
   "Promote": "Promote",
   "Remove": "Remove",
-  "Add": "Add",
   "Edit": "Edit",
   "Done": "Done",
   "Fill this card with content": "Fill this card with content",
@@ -75,10 +74,10 @@
   "Start a Conversation": "Start a Conversation",
   "Link to Bible": "Link to Bible",
   "Visit a Website": "Visit a Website",
-  "Appears on <1>{{count}}</1> card_one": "Appears on <1>{{count}}</1> card",
-  "Appears on <1>{{count}}</1> card_other": "Appears on <1>{{count}}</1> cards",
-  "<0>{{count}}</0><1>card</1>_one": "<0>{{count}}</0><1>card</1>",
-  "<0>{{count}}</0><1>card</1>_other": "<0>{{count}}</0><1>cards</1>",
+  "Appears on <1>{count}</1> card_one": "Appears on <1>{count}</1> card",
+  "Appears on <1>{count}</1> card_other": "Appears on <1>{count}</1> card",
+  "<0>{count}</0><1>card</1>_one": "<0>{count}</0><1>card</1>",
+  "<0>{count}</0><1>card</1>_other": "<0>{count}</0><1>card</1>",
   "Messaging App View": "Messaging App View",
   "Social App View": "Social App View",
   "Button": "Button",
@@ -303,6 +302,7 @@
   "Public information about a person or a team created this journey": "Public information about a person or a team created this journey",
   "Creator's Info": "Creator's Info",
   "Embed web link from Google Slides or Canva": "Embed web link from Google Slides or Canva",
+  "Add": "Add",
   "Title": "Title",
   "Recommended length: six words or shorter": "Recommended length: six words or shorter",
   "Publicly visible on template details page": "Publicly visible on template details page",
