feat: email pref refactor

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -2,12 +2,12 @@
   "%s | Next Steps": "%s | Next Steps",
   "Admin | Next Steps": "Admin | Next Steps",
   "Email Preferences Updated.": "Email Preferences Updated.",
-  "Email Preferences Updated. Unsubscribed to all": "Email Preferences Updated. Unsubscribed to all",
   "Email Preferences": "Email Preferences",
+  "All Notifications": "All Notifications",
+  "All current and future email notifications.": "All current and future email notifications.",
   "Account Notifications": "Account Notifications",
   "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.": "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.",
-  "Unsubscribe All": "Unsubscribe All",
-  "Submit Changes": "Submit Changes",
+  "Done": "Done",
   "Journeys": "Journeys",
   "Create a New Journey": "Create a New Journey",
   "Request Access": "Request Access",
@@ -222,7 +222,6 @@
   "Blocks": "Blocks",
   "Add": "Add",
   "Edit": "Edit",
-  "Done": "Done",
   "Social Image": "Social Image",
   "Are you sure you would like to delete this card?": "Are you sure you would like to delete this card?",
   "Edit Journey Actions": "Edit Journey Actions",
