feat: email pref refactor

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -3,8 +3,8 @@
   "Admin | Next Steps": "Admin | Next Steps",
   "Email Preferences Updated.": "Email Preferences Updated.",
   "Email Preferences": "Email Preferences",
-  "All Notifications": "All Notifications",
-  "All current and future email notifications.": "All current and future email notifications.",
+  "Stop All Notifications": "Stop All Notifications",
+  "Stop all current and future email notifications.": "Stop all current and future email notifications.",
   "Account Notifications": "Account Notifications",
   "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.": "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.",
   "Done": "Done",
